[gd_scene load_steps=9 format=3 uid="uid://d3sftodihtbdx"]

[ext_resource type="Texture2D" uid="uid://c4r1bbuhmqdd4" path="res://Sprites/Enemies.png" id="1_06hh1"]
[ext_resource type="Script" path="res://Scenes/Enemies/Rat/rat.gd" id="1_ojjw5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_32vvn"]
atlas = ExtResource("1_06hh1")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2apsb"]
atlas = ExtResource("1_06hh1")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_spsx6"]
atlas = ExtResource("1_06hh1")
region = Rect2(32, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_7iqyj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_32vvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2apsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spsx6")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ds5f"]
size = Vector2(16, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_85dxt"]

[node name="Rat" type="Area2D"]
z_index = 4
script = ExtResource("1_ojjw5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_7iqyj")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 12)
shape = SubResource("RectangleShape2D_7ds5f")

[node name="Visibility" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]
position = Vector2(8, 12)
scale = Vector2(12, 12)
shape = SubResource("CircleShape2D_85dxt")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(8, 12)
target_position = Vector2(0, 116)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Visibility" to="." method="_on_visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_visibility_body_exited"]
